Simple Vehicle Reg Processing system fixes